[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pan123"
version = "0.1.0"
description = "123云盘上传工具"
authors = [{ name = "originalFactor", email = "2438926613@qq.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = "^=3.11"
dependencies = ["httpx", "pydantic", "truststore"]

[project.optional-dependencies]
dev = ["black", "basedpyright", "build", "twine"]

[tool.setuptools.packages.find]
where = ["pan123"]

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''/(\n    \.git\n  | \.venv\n  | build\n  | dist\n)/'''

[tool.isort]
profile = "black"
